# Math-Lib

./: .gitignore  Application.cpp  CMakeLists.txt  CompilerFlags.cmake  README.md
Source/Private/: CMakeLists.txt
Source/Private/Base/: Base.hpp  CMakeLists.txt  Random.cpp  Random.hpp  Typename.hpp
Source/Private/Base/Def/: Def.hpp  GaussKronrod.hpp  Typename.hpp
Source/Private/Base/Math/: Function.hpp
Source/Private/Base/Util/: Random.hpp
Source/Private/Base/Utility/: Random.hpp  Utility.hpp
Source/Private/Integration/: CMakeLists.txt  GaussKronrod.cpp  GaussKronrod.hpp  Integration.hpp  MonteCarlo.cpp  MonteCarlo.hpp
Source/Private/Spatial/: CMakeLists.txt  Matrix.hpp  Spatial.hpp  Tensor.hpp  Vector.hpp
Test/: Application.cpp
Test/Integration/: TestGK.cpp  TestMC.cpp
